# RL-Powered-Automated-HealthcareAssistant

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
agent/: __init__.py  rl_agent.py  train.py
docs/: dataFlow.txt
environment/: __init__.py  healthcare_env.py  reward.py
llm/: __init__.py  answer_evaluator.py  gemini_handler.py  openai_handler.py
server/: __init__.py  app.py
tests/: test_reward.py
